[gd_scene load_steps=8 format=2]

[ext_resource path="res://ActionBar.gd" type="Script" id=1]
[ext_resource path="res://images/eye.png" type="Texture" id=2]
[ext_resource path="res://images/eyeS.png" type="Texture" id=3]
[ext_resource path="res://images/walk.png" type="Texture" id=4]
[ext_resource path="res://images/walkS.png" type="Texture" id=5]
[ext_resource path="res://images/hand.png" type="Texture" id=6]
[ext_resource path="res://images/handS.png" type="Texture" id=7]

[node name="ActionBar" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Material", "Transform", "Visibility", "Z Index" ]

[node name="LookButton" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 31.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
stretch_mode = 5
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[node name="WalkButton" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_right = 66.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
stretch_mode = 5
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect", "Size Flags", "Textures" ]

[node name="HandButton" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 100.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
stretch_mode = 5
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]

[connection signal="pressed" from="LookButton" to="." method="_on_LookButton_pressed"]

[connection signal="pressed" from="WalkButton" to="." method="_on_WalkButton_pressed"]

[connection signal="pressed" from="HandButton" to="." method="_on_HandButton_pressed"]


